syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";

option go_package = "file_service/file_proto";


message FileUploadRequest {
    string file_name = 1;
    bytes chunk = 2;
}

message FileUploadResponse {
  string file_name = 1;
  uint32 size = 2;
}

message FileDownloadRequest {
  string file_name = 1;
  int32 chank_size = 2;
}

message FileDownloadResponse {
  bytes chunk = 2;
}

message FileListRequest {}

message FileInfo {
  string file_name = 1;
  google.protobuf.Timestamp created = 2;
  google.protobuf.Timestamp updated = 3;
}

message FileListResponse {
  repeated FileInfo files = 1;
}

service FileService {
   rpc Upload(stream FileUploadRequest) returns(FileUploadResponse);
   rpc Download(FileDownloadRequest) returns(stream FileDownloadResponse);
   rpc List(FileListRequest) returns(FileListResponse);
}
